Add section in CSS

--- a/style.css
+++ b/style.css
@@ -1,1 +1,36 @@
+/* ===========
+//  GENERAL  //
+============== */
 
+
+
+
+/* =============
+//  HEADER/NAV  //
+================ */
+
+
+/* =============
+//   GALERY     //
+================ */
+
+
+
+/* =============
+//   WHAT WE DO  //
+================ */
+
+
+/* =============
+//     FORM     //
+================ */
+
+
+/* =============
+//   ABOUT US    //
+================ */
+
+
+/* =============
+//   FOOTER      //
+================ */
