change section name galery to slideshow

--- a/style.css
+++ b/style.css
@@ -11,9 +11,8 @@
 
 
 /* =============
-//   GALERY     //
+//  SLIDESHOW   //
 ================ */
-
 
 /* Slideshow container */
 .slideshow-container {
