--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 ============== */
 * {box-sizing:border-box}
 
+html, 
+body {
+    height: 100%;
+}
 
 
 /* =============
@@ -131,3 +135,34 @@
 /* =============
 //   FOOTER      //
 ================ */
+
+
+
+li {
+    list-style: none;
+    margin: 5px;
+}
+
+.footer ul,
+.footer ul li ul 
+ {
+    display: flex;
+    justify-content:space-evenly;
+}
+
+.footer ul li ul {
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
+@media screen and (max-width: 960px) { 
+
+footer ul {
+        flex-direction: column;   
+    }
+    
+
+        
+}
