--- a/style.css
+++ b/style.css
@@ -112,6 +112,18 @@ li {
 }
 
 
+
+
+
+
+
+
+
+
+/* =============
+//   Media queries      //
+================ */
+
 @media screen and (max-width: 960px) { 
 
 footer ul {
