--- a/style.css
+++ b/style.css
@@ -43,18 +43,31 @@ font-family: 'Pacifico', cursive;
   height: 250px;
   width: 30%;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+
+.text-box {
+  width: 80%;
+  height: 80%;
+  display: flex;
   text-align: center;
   flex-direction: column;
   justify-content: center;
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 5px;
 }
 
 .mySlides h3 {
   margin-bottom: 2rem;
-  font-size: 20px;
+  font-size: 25px;
+  color: #262626;
 }
 
 .mySlides p {
   padding: 0.6rem 0.6rem;
+  color: #262626;
 }
 
 .img1 {
