--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@
 html, 
 body {
     height: 100%;
+    font-family: 'Oswald', sans-serif;
 }
 
 
 h1, h2, h3 {
-font-family: 'Pacifico', cursive;
+  font-family: 'Pacifico', cursive;
 }
+
 /* =============
 //  HEADER/NAV  //
 ================ */
@@ -54,47 +56,6 @@ header {
 //   SLIDESHOW    //
 ================ */
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-#our-values {
-  margin-bottom: 3rem;
-}
-
 #our-values h2 {
   text-align: center;
   font-size: 40px;
@@ -131,49 +92,6 @@ header {
   margin-bottom: 2rem;
   font-size: 25px;
   color: #262626;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
 }
 
 .mySlides p {
@@ -291,32 +209,39 @@ header {
 ================ */
 
 
-
-li {
-    list-style: none;
-    margin: 5px;
+.footer ul>li>ul>li {
+  list-style: none;
+  padding: 1em;
 }
-
+.footer {
+height: auto ;
+}
+.footer>ul {
+background-image: linear-gradient(to top, #3391A6, #78A9C3, #AEC3DA, #DBDFEC, #FFFFFF);
+flex: 1;
+padding: 5% 0;
+}
+.footer,
 .footer ul,
-.footer ul li ul 
- {
-    display: flex;
-    justify-content:space-evenly;
+.footer ul li ul
+{
+  display: flex;
+  justify-content:space-evenly;
 }
-
 .footer ul li ul {
-    flex-direction: column;
-    align-items: center;
-
+  flex-direction: column;
+  align-items: center;
 }
-
-
-@media screen and (max-width: 960px) { 
-
+.footer ul>li>ul>li:hover {
+filter: brightness(50%);
+opacity: 0.4;
+padding: 1.1em;
+}
+/* =============
+//   Media queries      //
+================ */
+@media screen and (max-width: 960px) {
 footer ul {
-        flex-direction: column;   
-    }
-    
-
-        
+      flex-direction: column;
+  }
 }
