--- a/style.css
+++ b/style.css
@@ -144,11 +144,18 @@ header {
   justify-content: center;
   border-top: 3px solid black;
   border-bottom: 3px solid black;
-  background-color: #3FA663;
+  background-color: #5CF291;
+  /*#3391A6
+  #25594A
+  #3FA663 => #5CF291
+  #2D7345
+  #262626*/
 }
 
 #formulaire > h2 {
-  margin: 1vw;
+  font-size: 40px;
+  color:#25594A;
+  margin: 3rem auto;
 }
 
 #formulaire > form {
@@ -160,9 +167,10 @@ header {
 }
 
 .borderer {
-	border-radius: 0px;
-  border: 2px solid black;
+	border-radius: 15px;
+  border: 2px solid #25594A;
   margin: 1vw 0;
+  height: 3vw;
 }
 
 #formulaire > form > textarea {
@@ -173,6 +181,10 @@ header {
   width: 10vw;
   height: 3vw;
   margin: 1vw auto;
+}
+
+#send:hover {
+
 }
 
 #formulaire p {
