--- a/style.css
+++ b/style.css
@@ -170,7 +170,13 @@ header {
 	border-radius: 15px;
   border: 2px solid #25594A;
   margin: 1vw 0;
-  height: 3vw;
+  height: 4vw;
+  padding: 0.8vw 1.5vw;
+  font-size: 1.5vw;
+}
+
+#formulaire > form > input {
+  
 }
 
 #formulaire > form > textarea {
