--- a/style.css
+++ b/style.css
@@ -24,17 +24,20 @@ font-family: 'Pacifico', cursive;
 ================ */
 
 header {
-  height: 350px;
-  background-image: url("Images/header.jpg");
+  height: 450px;
+  background-image:  url("Images/header.jpg");
   background-size: cover;
   background-position: center center;
   color: white;
-  opacity: 55%;
+}
+nav {
+  background-color: rgb(63, 166, 99);
+  position: sticky;
 }
 
 .titreh1 {
   text-align: center;
-  height: 250px;
+  height: 400px;
   justify-content: center;
   font-size: 80px;
 }
@@ -50,10 +53,15 @@ header {
   justify-content: center;
   list-style-type: none;
   font-size: 45px;
+  height: 50px;
+
 }
 
 .liheader {
-  padding: 30px;
+  padding-left: 60px;
+  padding-right: 60px;
+  
+
 }
 
 /* =============
