--- a/style.css
+++ b/style.css
@@ -31,35 +31,39 @@ header {
   color: white;
 }
 nav {
+  width: 100%;
   background-color: rgb(63, 166, 99);
   position: sticky;
+  top: 0;
+
 }
 
 .titreh1 {
   text-align: center;
   height: 400px;
   justify-content: center;
-  font-size: 80px;
+  font-size: 6rem;
+  padding-top: 100px;
 }
 
 .spanY {
   color: yellowgreen;
-  font-size: 170px;
+  font-size: 12rem;
 }
 
-.ulheader {
+nav .ulheader {
   display: flex;
   flex-direction: row;
   justify-content: center;
   list-style-type: none;
-  font-size: 45px;
+  font-size: 3rem;
   height: 50px;
 
 }
 
 .liheader {
-  padding-left: 60px;
-  padding-right: 60px;
+  padding: 0 120px;
+  height: 100%;
   
 
 }
