--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav {
   background-color: rgb(63, 166, 99);
   position: sticky;
   top: 0;
+  margin-bottom: 20px;
 
 }
 
@@ -63,7 +64,7 @@ nav .ulheader {
 }
 
 .liheader {
-  padding: 0 120px;
+  padding: 0 70px;
   height: 100%;
   
 
