--- a/style.css
+++ b/style.css
@@ -184,42 +184,69 @@ header {
 //   ABOUT US    //
 ================ */
 
+#about-us h2 {
+  text-align: center;
+  font-size: 3rem;
+  color: #3391A6;
+  margin: 3rem;
+}
+
+#about-us h3{
+  color: #3391A6;
+  font-size: 2rem;
+  margin: 2rem;
+  text-align: center;
+}
+
 .aboutus{
-  position: relative;
-  display:flex;
-  align-content: stretch;
-}
-
-.aboutus iframe{
-  flex-grow: 6;
-  padding:1vw;
-}
-
-.aboutbox {
-  flex-grow: 3;
-  margin:1vw;
-}
-.aboutbox h4, p {
-  margin:.8vw;
-}
-
-.aboutbox h4{
-  font-size: large;
-}
-
-.buttonteam {
   display:flex;
   justify-content: center;
 }
-.team {
-  padding:10px;
-  border-radius: 5px;
-  margin: 5vw;
-  font-family: 'Oswald', sans-serif;
-  font-size: large;
 
+.aboutus iframe{
+  flex-grow: 1;
+  margin-left:5vw;
 }
 
+.aboutbox {
+  flex-grow: 2;
+  margin-left:5vw;
+}
+.aboutbox p {
+  margin:.8vw;
+}
+
+
+.avatarteam {
+  display:flex;
+  margin-left: 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: wrap;
+}
+
+
+.team {
+  background: center url("Images/user.png") no-repeat;
+  font-family: 'Oswald', sans-serif;
+  margin:.4vw;
+  padding: 5vw;
+  
+}
+.team p{
+  text-align: center;
+  color: white;
+  visibility: hidden;;
+}
+
+.team:hover{
+  background:#3391A6 no-repeat;
+}
+
+.team:hover p{
+  visibility: visible;
+}
 
 /* =============
 //   FOOTER      //
@@ -268,7 +295,11 @@ footer ul>li>ul>li {
 ================ */
 
 @media screen and (max-width: 960px) {
-footer ul {
+
+ 
+
+
+  footer ul {
       flex-direction: column;
   }
 }
