--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ nav {
   position: sticky;
   top: 0;
   margin-bottom: 20px;
+  height: 70px;
 
 }
 
@@ -55,19 +56,11 @@ nav {
 nav .ulheader {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   list-style-type: none;
-  font-size: 3rem;
-  height: 50px;
+  font-size: 2.2rem;
   color: white;
-
-}
-
-.liheader {
-  padding: 0 70px;
-  height: 100%;
-  
-
 }
 
 /* =============
