--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 html, 
 body {
-    height: 100%;
     font-family: 'Oswald', sans-serif;
 }
 a { 
@@ -24,7 +23,7 @@ font-family: 'Pacifico', cursive;
 ================ */
 
 header {
-  height: 450px;
+  padding: 60px 0;
   background-image:  url("Images/header.jpg");
   background-size: cover;
   background-position: center center;
@@ -34,18 +33,20 @@ nav {
   width: 100%;
   background-color: rgb(63, 166, 99);
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
   margin-bottom: 20px;
-  height: 70px;
+  padding: 15px 0;
+  
 
 }
 
 .titreh1 {
   text-align: center;
-  height: 400px;
   justify-content: center;
   font-size: 6rem;
-  padding-top: 100px;
+  padding-top: 50px;
+  padding-bottom: 30px;
 }
 
 .spanY {
@@ -294,8 +295,28 @@ color: #1BBC9B;
 /* =============
 //   Media queries      //
 ================ */
-
 @media screen and (max-width: 960px) {
+/*============
+//     Header Nav   //
+==================*/
+nav .ulheader {
+  flex-direction: column;
+  align-items: center;
+}
+
+.titreh1 {
+  font-size: 3rem;
+}
+.spanY {
+  font-size: 6rem;
+}
+
+
+
+/*============
+//     Footer   //
+==================*/
+
 footer ul {
       flex-direction: column;
   }
