--- a/style.css
+++ b/style.css
@@ -133,6 +133,10 @@ nav .ulheader {
 /* =============
 //   WHAT WE DO  //
 ================ */
+#what-we-do {
+  min-height: auto;
+  margin-bottom: 5%;
+}
 #what-we-do h2 {
   text-align: center;
   font-size: 40px;
@@ -143,11 +147,8 @@ nav .ulheader {
   display: flex;
   justify-content: space-around;
 }
-#what-we-do article {
-  margin-bottom: 5%;
-}
 .wwd-item{
-  height: 250px;
+  min-height: 250px;
   width: 30%;
   text-align: center;
   align-items: center;
@@ -163,6 +164,11 @@ nav .ulheader {
   display: space-arround;
   height: auto;
   width: 33%;
+  margin-bottom: 1rem;
+}
+#what-we-do p {
+  overflow: ;
+  margin-bottom: 5%;
 }
 
 
@@ -373,6 +379,12 @@ color: #1BBC9B;
    align-items: center;
  }
 
+ /*---------what we do---------*/
+ .wwd-item {
+  flex-direction: column;
+  flex-flow: wrap;
+  align-items: center;
+ }
 
 
 /*============
