--- a/style.css
+++ b/style.css
@@ -6,15 +6,16 @@
   box-sizing:border-box;
 }
 
+
 html, 
 body {
     font-family: 'Oswald', sans-serif;
     color:#323540
 }
+
 a { 
   color: inherit;
   text-decoration: none;
-
 }
 
 h1, h2, footer li {
@@ -97,12 +98,12 @@ nav .ulheader {
   height: 300px;
   overflow: hidden;
   margin: 15px;
-  border-radius: 3px;
-  box-shadow: 12px 12px 10px #F08080;
+  border-radius: 5px;
+  box-shadow: 12px 12px 10px rgba(240, 128, 128, .7);
 }
 
 #some-projects .projects-container article:nth-of-type(2n +2) {
-  box-shadow: 12px 12px 10px #3FA663;
+  box-shadow: 12px 12px 10px rgba(63, 166, 99, .6);
 }
 
 #some-projects .projects-container article img {
