--- a/style.css
+++ b/style.css
@@ -104,9 +104,14 @@ nav .ulheader {
   width: 400px;
   height: 300px;
   overflow: hidden;
-  margin: 15px;
+  margin: 20px;
   border-radius: 5px;
   box-shadow: 12px 12px 10px rgba(240, 128, 128, .7);
+}
+
+#some-projects .projects-container article img:hover {
+  width: 105%;
+  height: 105%;
 }
 
 #some-projects .projects-container article:nth-of-type(2n +2) {
@@ -117,6 +122,7 @@ nav .ulheader {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: width .5s, height .5s;
 }
 
 
@@ -237,9 +243,8 @@ nav .ulheader {
   font-size: 1.5rem;
   text-align: center;
   color: #262626;
+  line-height: 120%;
 }
-
-
 
 
 /* =============
