just some tests for Js and button on testimonials

--- a/style.css
+++ b/style.css
@@ -350,7 +350,8 @@ form input, textarea::placeholder {
 ================ */
 .container-testimonial{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  width: 100vw;
   
 }
 
@@ -359,6 +360,7 @@ form input, textarea::placeholder {
   border-radius: 5px;
   margin: 15px;
   flex: 1 1 0;
+  flex-wrap: wrap;
 }
 
 .testimonial__icon {
@@ -370,7 +372,7 @@ form input, textarea::placeholder {
 
 .testimonial__quote {
   line-height: 1.4;
-  margin-bottom: var(--space-md);
+  margin-bottom: 5px;
 }
 
 .testimonial__footer {
@@ -383,15 +385,54 @@ form input, textarea::placeholder {
   }
 }
 
+
 .testimonial__cite {
   font-size: 1rem;
   font-style: italic;
-  span {
+}
+
+.testimonial__cite  span {
     color: var(--dark_color);
   }
-}
+
 .testimonial mark{
   background-color: var(--lightgreen_color);
+}
+
+button {
+  height: 10%;
+  border: none;
+  outline: none;
+  background: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  padding: 1em;
+  display: flex;
+}
+
+button .arrow {
+  border: solid #fff;
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 10px;
+  transition: transform 0.3s ease-out;
+  outline: none;
+}
+
+#right-btn {
+  margin: auto 0 auto -2em;
+}
+
+#right-btn .arrow {
+  transform: rotate(-45deg);
+}
+
+#left-btn {
+  z-index: 0;
+  margin: auto -2em auto 0;
+}
+
+#left-btn .arrow {
+  transform: rotate(135deg);
 }
 /* =============
 //   MEET OUR TEAM    //
