--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ form label {
 #send {
   width: 130px;
   margin: 3vw auto;
-  transition: background-color .5s, width .5s;
+  transition: background-color .5s, transform .5s, color .5s;
   cursor: pointer;
   font-weight: bolder;
 }
@@ -348,7 +348,7 @@ form label {
 #send:hover {
   background-color: var(--corail_color);
   color: var(--white_color);
-  width: 100px;
+  transform: scale(1.3);
 }
 
 #formulaire p {
